fix(styles): fix preloader position & auto hide aside scrollbar in IE

--- a/src/core/theme/styles/app/sidebar.less
+++ b/src/core/theme/styles/app/sidebar.less
@@ -29,6 +29,18 @@
         //     margin-right: -17px;
         //     overflow-y: scroll;
         // }
+
+        /*IE10,IE11*/
+        -ms-scroll-chaining: chained;
+        -ms-overflow-style: none;
+        -ms-content-zooming: zoom;
+        -ms-scroll-rails: none;
+        -ms-content-zoom-limit-min: 100%;
+        -ms-content-zoom-limit-max: 500%;
+        -ms-scroll-snap-type: proximity;
+        -ms-scroll-snap-points-x: snapList(100%, 200%, 300%, 400%, 500%);
+        -ms-overflow-style: none;
+
         &::-webkit-scrollbar {
             height: @aside-scrollbar-width;
             width: @aside-scrollbar-height;
